--- a/govcms_mhr/sass/pages/_home.scss
+++ b/govcms_mhr/sass/pages/_home.scss
@@ -45,6 +45,7 @@
       #home-content-top-navigation a.btn {
         padding: rem(20) rem(50) rem(20) rem(40);
         font-size: 1rem;
+        white-space: nowrap;
       }
       #home-content-top-navigation p {
         margin: rem(20) rem(30);
